@@ -41,6 +41,7 @@ import io.micronaut.core.type.Argument;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.core.util.Toggleable;
 import io.micronaut.core.value.OptionalValues;
+import io.micronaut.expressions.context.ExpressionWithContext;
 import io.micronaut.inject.BeanDefinition;
 import io.micronaut.inject.ExecutableMethod;
 import io.micronaut.inject.ProxyBeanDefinition;
@@ -987,7 +988,8 @@ public class AopProxyWriter extends AbstractClassFileWriter implements ProxyingB
                     buildProxyLookupArgument(proxyConstructorGenerator, targetType);
                     proxyConstructorGenerator.loadArg(qualifierIndex);
 
-                    pushMethodNameAndTypesArguments(proxyConstructorGenerator, methodRef.name, methodRef.argumentTypes);
+                    // Arguments are written as generic types, so we need to look for the method using the generic arguments
+                    pushMethodNameAndTypesArguments(proxyConstructorGenerator, methodRef.name, methodRef.genericArgumentTypes);
                     proxyConstructorGenerator.invokeInterface(
                             Type.getType(ExecutionHandleLocator.class),
                             METHOD_GET_PROXY_TARGET
@@ -1298,6 +1300,11 @@ public class AopProxyWriter extends AbstractClassFileWriter implements ProxyingB
     @Override
     public AnnotationMetadata getAnnotationMetadata() {
         return proxyBeanDefinitionWriter.getAnnotationMetadata();
+    }
+
+    @Override
+    public Set<ExpressionWithContext> getEvaluatedExpressions() {
+        return proxyBeanDefinitionWriter.getEvaluatedExpressions();
     }
 
     @Override
@@ -1612,16 +1619,18 @@ public class AopProxyWriter extends AbstractClassFileWriter implements ProxyingB
      * Method Reference class with names and a list of argument types. Used as the targets.
      */
     private static final class MethodRef {
-        protected final String name;
-        protected final List<ClassElement> argumentTypes;
-        protected final Type returnType;
         int methodIndex;
+        private final String name;
+        private final List<ClassElement> argumentTypes;
+        private final List<ClassElement> genericArgumentTypes;
+        private final Type returnType;
         private final List<String> rawTypes;
 
-        public MethodRef(String name, List<ParameterElement> argumentTypes, Type returnType) {
+        public MethodRef(String name, List<ParameterElement> parameterElements, Type returnType) {
             this.name = name;
-            this.argumentTypes = argumentTypes.stream().map(ParameterElement::getType).collect(Collectors.toList());
-            this.rawTypes = this.argumentTypes.stream().map(ClassElement::getName).collect(Collectors.toList());
+            this.argumentTypes = parameterElements.stream().map(ParameterElement::getType).toList();
+            this.genericArgumentTypes = parameterElements.stream().map(ParameterElement::getGenericType).toList();
+            this.rawTypes = this.argumentTypes.stream().map(ClassElement::getName).toList();
             this.returnType = returnType;
         }
 
