@@ -21,23 +21,25 @@ import io.micronaut.core.annotation.AnnotationUtil;
 import io.micronaut.core.annotation.Creator;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.naming.NameUtils;
 import io.micronaut.core.reflect.ClassUtils;
-import io.micronaut.core.util.StringUtils;
+import io.micronaut.inject.annotation.AnnotationMetadataHierarchy;
 import io.micronaut.inject.ast.ArrayableClassElement;
-import io.micronaut.inject.ast.PropertyElementQuery;
 import io.micronaut.inject.ast.ClassElement;
 import io.micronaut.inject.ast.ConstructorElement;
-import io.micronaut.inject.ast.ParameterElement;
-import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
 import io.micronaut.inject.ast.ElementQuery;
 import io.micronaut.inject.ast.FieldElement;
 import io.micronaut.inject.ast.GenericPlaceholderElement;
 import io.micronaut.inject.ast.MemberElement;
 import io.micronaut.inject.ast.MethodElement;
 import io.micronaut.inject.ast.PackageElement;
+import io.micronaut.inject.ast.ParameterElement;
 import io.micronaut.inject.ast.PropertyElement;
-import io.micronaut.inject.ast.WildcardElement;
+import io.micronaut.inject.ast.PropertyElementQuery;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadata;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
+import io.micronaut.inject.ast.annotation.MutableAnnotationMetadataDelegate;
 import io.micronaut.inject.ast.utils.AstBeanPropertiesUtils;
 import io.micronaut.inject.ast.utils.EnclosedElementsQuery;
 import io.micronaut.inject.processing.JavaModelUtils;
@@ -52,7 +54,6 @@ import javax.lang.model.element.TypeParameterElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.TypeMirror;
-import javax.lang.model.type.TypeVariable;
 import javax.lang.model.util.Types;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -84,125 +85,145 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
     private static final String KOTLIN_METADATA = "kotlin.Metadata";
     private static final String PREFIX_IS = "is";
     protected final TypeElement classElement;
-    final List<? extends TypeMirror> typeArguments;
-    private final int arrayDimensions;
+    protected final int arrayDimensions;
     private final boolean isTypeVariable;
     private List<PropertyElement> beanProperties;
-    private Map<String, Map<String, TypeMirror>> genericTypeInfo;
     private String simpleName;
     private String name;
     private String packageName;
+    @Nullable
     private Map<String, ClassElement> resolvedTypeArguments;
+    @Nullable
+    private Map<String, Map<String, ClassElement>> resolvedAllTypeArguments;
+    @Nullable
+    private ClassElement resolvedSuperType;
     private final JavaEnclosedElementsQuery enclosedElementsQuery = new JavaEnclosedElementsQuery();
+    @Nullable
+    private ElementAnnotationMetadata elementTypeAnnotationMetadata;
+    @Nullable
+    private ClassElement theType;
+    @Nullable
+    private AnnotationMetadata annotationMetadata;
+    @Nullable
+    // Not null means raw type definition: "List myMethod()"
+    // Null value means a class definition: "class List<T> {}"
+    final List<? extends TypeMirror> typeArguments;
 
     /**
-     * @param classElement              The {@link TypeElement}
+     * @param nativeType                The native type
      * @param annotationMetadataFactory The annotation metadata factory
      * @param visitorContext            The visitor context
      */
     @Internal
-    public JavaClassElement(TypeElement classElement, ElementAnnotationMetadataFactory annotationMetadataFactory, JavaVisitorContext visitorContext) {
-        this(classElement, annotationMetadataFactory, visitorContext, Collections.emptyList(), null, 0, false);
+    public JavaClassElement(JavaNativeElement.Class nativeType, ElementAnnotationMetadataFactory annotationMetadataFactory, JavaVisitorContext visitorContext) {
+        this(nativeType, annotationMetadataFactory, visitorContext, null, null, 0, false);
     }
 
     /**
-     * @param classElement              The {@link TypeElement}
+     * @param nativeType                The native type
      * @param annotationMetadataFactory The annotation metadata factory
      * @param visitorContext            The visitor context
      * @param typeArguments             The declared type arguments
-     * @param genericsInfo              The generic type info
+     * @param resolvedTypeArguments     The resolvedTypeArguments
      */
-    JavaClassElement(
-        TypeElement classElement,
-        ElementAnnotationMetadataFactory annotationMetadataFactory,
-        JavaVisitorContext visitorContext,
-        List<? extends TypeMirror> typeArguments,
-        Map<String, Map<String, TypeMirror>> genericsInfo) {
-        this(classElement, annotationMetadataFactory, visitorContext, typeArguments, genericsInfo, 0, false);
+    JavaClassElement(JavaNativeElement.Class nativeType,
+                     ElementAnnotationMetadataFactory annotationMetadataFactory,
+                     JavaVisitorContext visitorContext,
+                     List<? extends TypeMirror> typeArguments,
+                     @Nullable
+                     Map<String, ClassElement> resolvedTypeArguments) {
+        this(nativeType, annotationMetadataFactory, visitorContext, typeArguments, resolvedTypeArguments, 0, false);
     }
 
     /**
-     * @param classElement              The {@link TypeElement}
+     * @param nativeType                The native type
      * @param annotationMetadataFactory The annotation metadata factory
      * @param visitorContext            The visitor context
      * @param typeArguments             The declared type arguments
-     * @param genericsInfo              The generic type info
+     * @param resolvedTypeArguments     The resolvedTypeArguments
      * @param arrayDimensions           The number of array dimensions
      */
-    JavaClassElement(
-        TypeElement classElement,
-        ElementAnnotationMetadataFactory annotationMetadataFactory,
-        JavaVisitorContext visitorContext,
-        List<? extends TypeMirror> typeArguments,
-        Map<String, Map<String, TypeMirror>> genericsInfo,
-        int arrayDimensions) {
-        this(classElement, annotationMetadataFactory, visitorContext, typeArguments, genericsInfo, arrayDimensions, false);
+    JavaClassElement(JavaNativeElement.Class nativeType,
+                     ElementAnnotationMetadataFactory annotationMetadataFactory,
+                     JavaVisitorContext visitorContext,
+                     List<? extends TypeMirror> typeArguments,
+                     @Nullable
+                     Map<String, ClassElement> resolvedTypeArguments,
+                     int arrayDimensions) {
+        this(nativeType, annotationMetadataFactory, visitorContext, typeArguments, resolvedTypeArguments, arrayDimensions, false);
     }
 
     /**
-     * @param classElement              The {@link TypeElement}
+     * @param nativeType                The {@link TypeElement}
      * @param annotationMetadataFactory The annotation metadata factory
      * @param visitorContext            The visitor context
      * @param typeArguments             The declared type arguments
-     * @param genericsInfo              The generic type info
-     * @param isTypeVariable            Is the class element a type variable
-     */
-    JavaClassElement(
-        TypeElement classElement,
-        ElementAnnotationMetadataFactory annotationMetadataFactory,
-        JavaVisitorContext visitorContext,
-        List<? extends TypeMirror> typeArguments,
-        Map<String, Map<String, TypeMirror>> genericsInfo,
-        boolean isTypeVariable) {
-        this(classElement, annotationMetadataFactory, visitorContext, typeArguments, genericsInfo, 0, isTypeVariable);
-    }
-
-    /**
-     * @param classElement              The {@link TypeElement}
-     * @param annotationMetadataFactory The annotation metadata factory
-     * @param visitorContext            The visitor context
-     * @param typeArguments             The declared type arguments
-     * @param genericsInfo              The generic type info
+     * @param resolvedTypeArguments     The resolvedTypeArguments
      * @param arrayDimensions           The number of array dimensions
      * @param isTypeVariable            Is the type a type variable
      */
-    JavaClassElement(
-        TypeElement classElement,
-        ElementAnnotationMetadataFactory annotationMetadataFactory,
-        JavaVisitorContext visitorContext,
-        List<? extends TypeMirror> typeArguments,
-        Map<String, Map<String, TypeMirror>> genericsInfo,
-        int arrayDimensions,
-        boolean isTypeVariable) {
-        super(classElement, annotationMetadataFactory, visitorContext);
-        this.classElement = classElement;
+    JavaClassElement(JavaNativeElement.Class nativeType,
+                     ElementAnnotationMetadataFactory annotationMetadataFactory,
+                     JavaVisitorContext visitorContext,
+                     List<? extends TypeMirror> typeArguments,
+                     @Nullable
+                     Map<String, ClassElement> resolvedTypeArguments,
+                     int arrayDimensions,
+                     boolean isTypeVariable) {
+        super(nativeType, annotationMetadataFactory, visitorContext);
+        this.classElement = nativeType.element();
         this.typeArguments = typeArguments;
-        this.genericTypeInfo = genericsInfo;
+        this.resolvedTypeArguments = resolvedTypeArguments;
         this.arrayDimensions = arrayDimensions;
         this.isTypeVariable = isTypeVariable;
     }
 
     @Override
-    protected JavaClassElement copyThis() {
-        return new JavaClassElement(classElement, elementAnnotationMetadataFactory, visitorContext, typeArguments, genericTypeInfo);
+    public JavaNativeElement.Class getNativeType() {
+        return (JavaNativeElement.Class) super.getNativeType();
     }
 
     @Override
-    protected void copyValues(AbstractJavaElement element) {
-        super.copyValues(element);
-        ((JavaClassElement) element).resolvedTypeArguments = resolvedTypeArguments;
+    protected JavaClassElement copyThis() {
+        return new JavaClassElement(getNativeType(), elementAnnotationMetadataFactory, visitorContext, typeArguments, resolvedTypeArguments, arrayDimensions);
     }
 
     @Override
     public ClassElement withTypeArguments(Map<String, ClassElement> newTypeArguments) {
-        JavaClassElement javaClassElement = (JavaClassElement) makeCopy();
-        javaClassElement.resolvedTypeArguments = newTypeArguments;
-        return javaClassElement;
+        return new JavaClassElement(getNativeType(), elementAnnotationMetadataFactory, visitorContext, typeArguments, newTypeArguments, arrayDimensions);
     }
 
     @Override
     public ClassElement withAnnotationMetadata(AnnotationMetadata annotationMetadata) {
         return (ClassElement) super.withAnnotationMetadata(annotationMetadata);
+    }
+
+    @Override
+    protected MutableAnnotationMetadataDelegate<?> getAnnotationMetadataToWrite() {
+        if (getNativeType().typeMirror() == null) {
+            return super.getAnnotationMetadataToWrite();
+        }
+        return getTypeAnnotationMetadata();
+    }
+
+    @Override
+    public AnnotationMetadata getAnnotationMetadata() {
+        if (annotationMetadata == null) {
+            if (getNativeType().typeMirror() == null) {
+                annotationMetadata = super.getAnnotationMetadata();
+            } else {
+                annotationMetadata = new AnnotationMetadataHierarchy(true, super.getAnnotationMetadata(), getTypeAnnotationMetadata());
+            }
+        }
+        return annotationMetadata;
+    }
+
+    @Override
+    public MutableAnnotationMetadataDelegate<AnnotationMetadata> getTypeAnnotationMetadata() {
+        if (elementTypeAnnotationMetadata == null) {
+            elementTypeAnnotationMetadata = elementAnnotationMetadataFactory.buildTypeAnnotations(this);
+        }
+        return elementTypeAnnotationMetadata;
     }
 
     @Override
@@ -225,33 +246,6 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         return JavaModelUtils.isRecord(classElement);
     }
 
-    public final TypeElement getNativeTypeElement() {
-        return classElement;
-    }
-
-    @NonNull
-    @Override
-    public Map<String, ClassElement> getTypeArguments(@NonNull String type) {
-        if (StringUtils.isNotEmpty(type)) {
-            Map<String, Map<String, TypeMirror>> data = visitorContext.getGenericUtils().buildGenericTypeArgumentElementInfo(classElement, null, getBoundTypeMirrors());
-            Map<String, TypeMirror> forType = data.get(type);
-            if (forType != null) {
-                Map<String, ClassElement> typeArgs = new LinkedHashMap<>(forType.size());
-                for (Map.Entry<String, TypeMirror> entry : forType.entrySet()) {
-                    TypeMirror v = entry.getValue();
-                    ClassElement ce = v != null ? mirrorToClassElement(v, visitorContext, Collections.emptyMap(), visitorContext.getConfiguration().includeTypeLevelAnnotationsInGenericArguments()) : null;
-                    if (ce == null) {
-                        return Collections.emptyMap();
-                    } else {
-                        typeArgs.put(entry.getKey(), ce);
-                    }
-                }
-                return Collections.unmodifiableMap(typeArgs);
-            }
-        }
-        return Collections.emptyMap();
-    }
-
     @Override
     public boolean isPrimitive() {
         return ClassUtils.getPrimitiveType(getName()).isPresent();
@@ -259,42 +253,25 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
 
     @Override
     public Collection<ClassElement> getInterfaces() {
-        final List<? extends TypeMirror> interfaces = classElement.getInterfaces();
-        if (!interfaces.isEmpty()) {
-            return Collections.unmodifiableList(interfaces.stream().map((mirror) ->
-                mirrorToClassElement(mirror, visitorContext, genericTypeInfo)).collect(Collectors.toList())
-            );
-        }
-        return Collections.emptyList();
+        return classElement.getInterfaces().stream().map(mirror -> newClassElement(mirror, getTypeArguments())).toList();
     }
 
     @Override
     public Optional<ClassElement> getSuperType() {
-        final TypeMirror superclass = classElement.getSuperclass();
-        if (superclass != null) {
+        if (resolvedSuperType == null) {
+            final TypeMirror superclass = classElement.getSuperclass();
+            if (superclass == null) {
+                return Optional.empty();
+            }
             final Element element = visitorContext.getTypes().asElement(superclass);
-
             if (element instanceof TypeElement superElement) {
-                if (!Object.class.getName().equals(superElement.getQualifiedName().toString())) {
-                    // if super type has type arguments, then build a parameterized ClassElement
-                    if (superclass instanceof DeclaredType && !((DeclaredType) superclass).getTypeArguments().isEmpty()) {
-                        return Optional.of(
-                            parameterizedClassElement(
-                                superclass,
-                                visitorContext,
-                                visitorContext.getGenericUtils().buildGenericTypeArgumentElementInfo(classElement, null, getBoundTypeMirrors())));
-                    }
-                    return Optional.of(
-                        new JavaClassElement(
-                            superElement,
-                            elementAnnotationMetadataFactory,
-                            visitorContext
-                        )
-                    );
+                if (Object.class.getName().equals(superElement.getQualifiedName().toString())) {
+                    return Optional.empty();
                 }
+                resolvedSuperType = newClassElement(superclass, getTypeArguments());
             }
         }
-        return Optional.empty();
+        return Optional.ofNullable(resolvedSuperType);
     }
 
     @Override
@@ -330,7 +307,7 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         }
         Function<MethodElement, Optional<String>> customReaderPropertyNameResolver = methodElement -> Optional.empty();
         Function<MethodElement, Optional<String>> customWriterPropertyNameResolver = methodElement -> Optional.empty();
-        if (isKotlinClass(getNativeTypeElement())) {
+        if (isKotlinClass(getNativeType().element())) {
             Set<String> isProperties = getEnclosedElements(ElementQuery.ALL_METHODS)
                 .stream()
                 .map(io.micronaut.inject.ast.Element::getName)
@@ -383,7 +360,7 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
 
     private List<MethodElement> getRecordMethods() {
         List<MethodElement> methodElements = new ArrayList<>();
-        classElement.asType().accept(new SuperclassAwareTypeVisitor<Object, Object>(visitorContext) {
+        classElement.asType().accept(new SuperclassAwareTypeVisitor<>(visitorContext) {
 
             private final Set<String> recordComponents = new HashSet<>();
 
@@ -410,10 +387,14 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
             @Override
             protected void accept(DeclaredType type, Element element, Object o) {
                 String name = element.getSimpleName().toString();
-                if (element instanceof ExecutableElement) {
+                if (element instanceof ExecutableElement executableElement) {
                     if (recordComponents.contains(name)) {
                         methodElements.add(
-                            new JavaMethodElement(JavaClassElement.this, (ExecutableElement) element, elementAnnotationMetadataFactory, visitorContext)
+                            new JavaMethodElement(
+                                JavaClassElement.this,
+                                new JavaNativeElement.Method(executableElement),
+                                elementAnnotationMetadataFactory,
+                                visitorContext)
                         );
                     }
                 } else if (element instanceof VariableElement) {
@@ -427,7 +408,7 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
 
     private List<FieldElement> getRecordFields() {
         List<FieldElement> fieldElements = new ArrayList<>();
-        classElement.asType().accept(new SuperclassAwareTypeVisitor<Object, Object>(visitorContext) {
+        classElement.asType().accept(new SuperclassAwareTypeVisitor<>(visitorContext) {
 
             @Override
             protected boolean isAcceptable(Element element) {
@@ -452,9 +433,13 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
 
             @Override
             protected void accept(DeclaredType type, Element element, Object o) {
-                if (element instanceof VariableElement) {
+                if (element instanceof VariableElement variableElement) {
                     fieldElements.add(
-                        new JavaFieldElement(JavaClassElement.this, (VariableElement) element, elementAnnotationMetadataFactory, visitorContext)
+                        new JavaFieldElement(
+                            JavaClassElement.this,
+                            new JavaNativeElement.Variable(variableElement),
+                            elementAnnotationMetadataFactory,
+                            visitorContext)
                     );
                 }
             }
@@ -469,17 +454,7 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
 
     @Override
     public <T extends io.micronaut.inject.ast.Element> List<T> getEnclosedElements(@NonNull ElementQuery<T> query) {
-        ClassElement classElementToInspect;
-        if (this instanceof GenericPlaceholderElement genericPlaceholderElement) {
-            List<? extends ClassElement> bounds = genericPlaceholderElement.getBounds();
-            if (bounds.isEmpty()) {
-                return Collections.emptyList();
-            }
-            classElementToInspect = bounds.get(0);
-        } else {
-            classElementToInspect = this;
-        }
-        return enclosedElementsQuery.getEnclosedElements(classElementToInspect, query);
+        return enclosedElementsQuery.getEnclosedElements(this, query);
     }
 
     @Override
@@ -497,7 +472,7 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         if (arrayDimensions == this.arrayDimensions) {
             return this;
         }
-        return new JavaClassElement(classElement, elementAnnotationMetadataFactory, visitorContext, typeArguments, getGenericTypeInfo(), arrayDimensions, false);
+        return new JavaClassElement(getNativeType(), elementAnnotationMetadataFactory, visitorContext, typeArguments, resolvedTypeArguments, arrayDimensions, false);
     }
 
     @Override
@@ -539,7 +514,6 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         } else {
             return PackageElement.DEFAULT_PACKAGE;
         }
-
     }
 
     @Override
@@ -556,9 +530,8 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         if (type.isPrimitive()) {
             return isAssignable(type.getName());
         }
-        Object nativeType = type.getNativeType();
-        if (nativeType instanceof TypeElement) {
-            return isAssignable((TypeElement) nativeType);
+        if (type instanceof JavaClassElement javaClassElement) {
+            return isAssignable(javaClassElement.getNativeType().element());
         }
         return isAssignable(type.getName());
     }
@@ -609,13 +582,14 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
             }
             // with records the record constructor is always the last constructor
             List<? extends RecordComponentElement> recordComponents = classElement.getRecordComponents();
-            constructorSearch: for (ConstructorElement constructor : constructors) {
+            constructorSearch:
+            for (ConstructorElement constructor : constructors) {
                 ParameterElement[] parameters = constructor.getParameters();
                 if (parameters.length == recordComponents.size()) {
                     for (int i = 0; i < parameters.length; i++) {
                         ParameterElement parameter = parameters[i];
                         RecordComponentElement rce = recordComponents.get(i);
-                        VariableElement ve = (VariableElement) parameter.getNativeType();
+                        VariableElement ve = ((JavaNativeElement.Variable) parameter.getNativeType()).element();
                         TypeMirror leftType = visitorContext.getTypes().erasure(ve.asType());
                         TypeMirror rightType = visitorContext.getTypes().erasure(rce.asType());
                         if (!leftType.equals(rightType)) {
@@ -640,10 +614,10 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         return visitorContext.getClassElement(getName() + "$Companion", elementAnnotationMetadataFactory)
             .filter(io.micronaut.inject.ast.Element::isStatic)
             .flatMap(typeElement -> typeElement.getEnclosedElements(ElementQuery.ALL_METHODS
-                .annotated(annotationMetadata -> annotationMetadata.hasStereotype(Creator.class))).stream().findFirst()
+                .annotated(am -> am.hasStereotype(Creator.class))).stream().findFirst()
             )
             .filter(method -> !method.isPrivate() && method.getReturnType().equals(this))
-            .map(Collections::singletonList).orElse(Collections.emptyList());
+            .stream().toList();
     }
 
     @Override
@@ -663,10 +637,12 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
     @NonNull
     @Override
     public List<ClassElement> getBoundGenericTypes() {
+        if (typeArguments == null) {
+            return Collections.emptyList();
+        }
         return typeArguments.stream()
-            //return getGenericTypeInfo().getOrDefault(classElement.getQualifiedName().toString(), Collections.emptyMap()).values().stream()
-            .map(tm -> mirrorToClassElement(tm, visitorContext, getGenericTypeInfo()))
-            .collect(Collectors.toList());
+            .map(tm -> newClassElement(tm, getTypeArguments()))
+            .toList();
     }
 
     @NonNull
@@ -674,8 +650,8 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
     public List<? extends GenericPlaceholderElement> getDeclaredGenericPlaceholders() {
         return classElement.getTypeParameters().stream()
             // we want the *declared* variables, so we don't pass in our genericsInfo.
-            .map(tpe -> (GenericPlaceholderElement) mirrorToClassElement(tpe.asType(), visitorContext))
-            .collect(Collectors.toList());
+            .map(tpe -> (GenericPlaceholderElement) newClassElement(tpe.asType(), Collections.emptyMap()))
+            .toList();
     }
 
     @NonNull
@@ -685,158 +661,56 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
             .withArrayDimensions(getArrayDimensions());
     }
 
-    private TypeMirror toTypeMirror(JavaVisitorContext visitorContext, ClassElement element) {
-        if (element.isArray()) {
-            return visitorContext.getTypes().getArrayType(toTypeMirror(visitorContext, element.fromArray()));
-        } else if (element.isWildcard()) {
-            WildcardElement wildcardElement = (WildcardElement) element;
-            List<? extends ClassElement> upperBounds = wildcardElement.getUpperBounds();
-            if (upperBounds.size() != 1) {
-                throw new UnsupportedOperationException("Multiple upper bounds not supported");
-            }
-            TypeMirror upperBound = toTypeMirror(visitorContext, upperBounds.get(0));
-            if (upperBound.toString().equals("java.lang.Object")) {
-                upperBound = null;
-            }
-            List<? extends ClassElement> lowerBounds = wildcardElement.getLowerBounds();
-            if (lowerBounds.size() > 1) {
-                throw new UnsupportedOperationException("Multiple upper bounds not supported");
-            }
-            TypeMirror lowerBound = lowerBounds.isEmpty() ? null : toTypeMirror(visitorContext, lowerBounds.get(0));
-            return visitorContext.getTypes().getWildcardType(upperBound, lowerBound);
-        } else if (element.isGenericPlaceholder()) {
-            if (!(element instanceof JavaGenericPlaceholderElement)) {
-                throw new UnsupportedOperationException("Free type variable on non-java class");
-            }
-            return ((JavaGenericPlaceholderElement) element).realTypeVariable;
-        } else {
-            if (element instanceof JavaClassElement) {
-                return visitorContext.getTypes().getDeclaredType(
-                    ((JavaClassElement) element).classElement,
-                    ((JavaClassElement) element).typeArguments.toArray(new TypeMirror[0]));
-            } else {
-                ClassElement classElement1 = visitorContext.getRequiredClassElement(element.getName(), elementAnnotationMetadataFactory);
-                return visitorContext.getTypes().getDeclaredType(
-                    ((JavaClassElement) classElement1).classElement,
-                    element.getBoundGenericTypes().stream().map(ce -> toTypeMirror(visitorContext, ce)).toArray(TypeMirror[]::new));
-            }
-        }
-    }
-
     @NonNull
     @Override
-    public ClassElement withBoundGenericTypes(@NonNull List<? extends ClassElement> typeArguments) {
-        if (typeArguments.isEmpty() && this.typeArguments.isEmpty()) {
+    public ClassElement withTypeArguments(@NonNull Collection<ClassElement> typeArguments) {
+        if (getTypeArguments().equals(typeArguments)) {
             return this;
         }
-
-        List<TypeMirror> typeMirrors = typeArguments.stream()
-            .map(ce -> toTypeMirror(visitorContext, ce))
-            .collect(Collectors.toList());
-        return withBoundGenericTypeMirrors(typeMirrors);
-    }
-
-    private ClassElement withBoundGenericTypeMirrors(@NonNull List<? extends TypeMirror> typeMirrors) {
-        if (typeMirrors.equals(this.typeArguments)) {
-            return this;
-        }
-
-        Map<String, TypeMirror> boundByName = new LinkedHashMap<>();
+        Map<String, ClassElement> boundByName = new LinkedHashMap<>();
         Iterator<? extends TypeParameterElement> tpes = classElement.getTypeParameters().iterator();
-        Iterator<? extends TypeMirror> args = typeMirrors.iterator();
+        Iterator<? extends ClassElement> args = typeArguments.iterator();
         while (tpes.hasNext() && args.hasNext()) {
-            boundByName.put(tpes.next().getSimpleName().toString(), args.next());
+            ClassElement next = args.next();
+            Object nativeType = next.getNativeType();
+            if (nativeType instanceof Class<?> aClass) {
+                next = visitorContext.getClassElement(aClass).orElse(next);
+            }
+            boundByName.put(tpes.next().getSimpleName().toString(), next);
         }
-
-        Map<String, Map<String, TypeMirror>> genericsInfo = visitorContext.getGenericUtils().buildGenericTypeArgumentElementInfo(classElement, null, boundByName);
-        return new JavaClassElement(classElement, elementAnnotationMetadataFactory, visitorContext, typeMirrors, genericsInfo, arrayDimensions);
+        return withTypeArguments(boundByName);
     }
 
     @Override
     @NonNull
     public Map<String, ClassElement> getTypeArguments() {
         if (resolvedTypeArguments == null) {
-            resolvedTypeArguments = resolveTypeArguments();
+            resolvedTypeArguments = resolveTypeArguments(classElement, typeArguments);
         }
         return resolvedTypeArguments;
-    }
-
-    private Map<String, ClassElement> resolveTypeArguments() {
-        List<? extends TypeParameterElement> typeParameters = classElement.getTypeParameters();
-        Iterator<? extends TypeParameterElement> tpi = typeParameters.iterator();
-
-        Map<String, ClassElement> map = new LinkedHashMap<>();
-        while (tpi.hasNext()) {
-            TypeParameterElement tpe = tpi.next();
-            ClassElement classElement = mirrorToClassElement(tpe.asType(), visitorContext, this.genericTypeInfo, visitorContext.getConfiguration().includeTypeLevelAnnotationsInGenericArguments());
-            map.put(tpe.toString(), classElement);
-        }
-
-        return Collections.unmodifiableMap(map);
-    }
-
-    private Map<String, TypeMirror> getBoundTypeMirrors() {
-        List<? extends TypeParameterElement> typeParameters = classElement.getTypeParameters();
-        Iterator<? extends TypeParameterElement> tpi = typeParameters.iterator();
-
-        Map<String, TypeMirror> map = new LinkedHashMap<>();
-        while (tpi.hasNext()) {
-            TypeParameterElement tpe = tpi.next();
-            TypeMirror t = tpe.asType();
-            map.put(tpe.toString(), t);
-        }
-
-        return Collections.unmodifiableMap(map);
     }
 
     @NonNull
     @Override
     public Map<String, Map<String, ClassElement>> getAllTypeArguments() {
-        Map<String, TypeMirror> typeArguments = getBoundTypeMirrors();
-        Map<String, Map<String, TypeMirror>> info = visitorContext.getGenericUtils()
-            .buildGenericTypeArgumentElementInfo(
-                classElement,
-                null,
-                typeArguments
-            );
-        Map<String, Map<String, ClassElement>> result = new LinkedHashMap<>(info.size());
-        info.forEach((name, generics) -> {
-            Map<String, ClassElement> resolved = new LinkedHashMap<>(generics.size());
-            generics.forEach((variable, mirror) -> {
-                final Map<String, TypeMirror> typeInfo = this.genericTypeInfo != null ? this.genericTypeInfo.get(getName()) : null;
-                TypeMirror resolvedType = mirror;
-                if (mirror instanceof TypeVariable && typeInfo != null) {
-                    final TypeMirror tm = typeInfo.get(mirror.toString());
-                    if (tm != null) {
-                        resolvedType = tm;
-                    }
-                }
-                ClassElement classElement = mirrorToClassElement(
-                    resolvedType,
-                    visitorContext,
-                    info,
-                    visitorContext.getConfiguration().includeTypeLevelAnnotationsInGenericArguments(),
-                    mirror instanceof TypeVariable
-                );
-                resolved.put(variable, classElement);
-            });
-            result.put(name, resolved);
-        });
-
-        if (!typeArguments.isEmpty()) {
-            result.put(JavaModelUtils.getClassName(this.classElement), getTypeArguments());
+        if (resolvedAllTypeArguments == null) {
+            resolvedAllTypeArguments = ArrayableClassElement.super.getAllTypeArguments();
         }
-        return result;
+        return resolvedAllTypeArguments;
     }
 
-    /**
-     * @return The generic type info for this class.
-     */
-    Map<String, Map<String, TypeMirror>> getGenericTypeInfo() {
-        if (genericTypeInfo == null) {
-            genericTypeInfo = visitorContext.getGenericUtils().buildGenericTypeArgumentElementInfo(classElement, null, getBoundTypeMirrors());
+    @Override
+    public ClassElement getType() {
+        if (theType == null) {
+            if (getNativeType().typeMirror() == null) {
+                theType = this;
+            } else {
+                // Strip the type mirror
+                // This should eliminate type annotations
+                theType = new JavaClassElement(new JavaNativeElement.Class(getNativeType().element()), elementAnnotationMetadataFactory, visitorContext, typeArguments, resolvedTypeArguments, arrayDimensions);
+            }
         }
-        return genericTypeInfo;
+        return theType;
     }
 
     private final class JavaEnclosedElementsQuery extends EnclosedElementsQuery<TypeElement, Element> {
@@ -844,13 +718,23 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         private List<? extends Element> enclosedElements;
 
         @Override
+        protected TypeElement getNativeClassType(ClassElement classElement) {
+            return ((JavaClassElement) classElement).getNativeType().element();
+        }
+
+        @Override
+        protected Element getNativeType(io.micronaut.inject.ast.Element element) {
+            return ((AbstractJavaElement) element).getNativeType().element();
+        }
+
+        @Override
         protected Set<Element> getExcludedNativeElements(ElementQuery.Result<?> result) {
             if (result.isExcludePropertyElements()) {
                 Set<Element> excludeElements = new HashSet<>();
                 for (PropertyElement excludePropertyElement : getBeanProperties()) {
-                    excludePropertyElement.getReadMethod().ifPresent(methodElement -> excludeElements.add((Element) methodElement.getNativeType()));
-                    excludePropertyElement.getWriteMethod().ifPresent(methodElement -> excludeElements.add((Element) methodElement.getNativeType()));
-                    excludePropertyElement.getField().ifPresent(fieldElement -> excludeElements.add((Element) fieldElement.getNativeType()));
+                    excludePropertyElement.getReadMethod().ifPresent(methodElement -> excludeElements.add(((JavaNativeElement) methodElement.getNativeType()).element()));
+                    excludePropertyElement.getWriteMethod().ifPresent(methodElement -> excludeElements.add(((JavaNativeElement) methodElement.getNativeType()).element()));
+                    excludePropertyElement.getField().ifPresent(methodElement -> excludeElements.add(((JavaNativeElement) methodElement.getNativeType()).element()));
                 }
                 return excludeElements;
             }
@@ -901,35 +785,34 @@ public class JavaClassElement extends AbstractJavaElement implements ArrayableCl
         }
 
         @Override
-        protected io.micronaut.inject.ast.Element toAstElement(Element enclosedElement) {
+        protected io.micronaut.inject.ast.Element toAstElement(Element nativeType, Class<?> elementType) {
             final JavaElementFactory elementFactory = visitorContext.getElementFactory();
-            return switch (enclosedElement.getKind()) {
+            return switch (nativeType.getKind()) {
                 case METHOD -> elementFactory.newMethodElement(
                     JavaClassElement.this,
-                    (ExecutableElement) enclosedElement,
-                    elementAnnotationMetadataFactory,
-                    genericTypeInfo
+                    (ExecutableElement) nativeType,
+                    elementAnnotationMetadataFactory
                 );
                 case FIELD -> elementFactory.newFieldElement(
                     JavaClassElement.this,
-                    (VariableElement) enclosedElement,
+                    (VariableElement) nativeType,
                     elementAnnotationMetadataFactory
                 );
                 case ENUM_CONSTANT -> elementFactory.newEnumConstantElement(
                     JavaClassElement.this,
-                    (VariableElement) enclosedElement,
+                    (VariableElement) nativeType,
                     elementAnnotationMetadataFactory
                 );
                 case CONSTRUCTOR -> elementFactory.newConstructorElement(
                     JavaClassElement.this,
-                    (ExecutableElement) enclosedElement,
+                    (ExecutableElement) nativeType,
                     elementAnnotationMetadataFactory
                 );
                 case CLASS, ENUM -> elementFactory.newClassElement(
-                    (TypeElement) enclosedElement,
+                    (TypeElement) nativeType,
                     elementAnnotationMetadataFactory
                 );
-                default -> throw new IllegalStateException("Unknown element: " + enclosedElement);
+                default -> throw new IllegalStateException("Unknown element: " + nativeType);
             };
         }
 
