@@ -21,12 +21,15 @@ import io.micronaut.core.annotation.NonNull;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.core.util.CollectionUtils;
 import io.micronaut.inject.ast.ClassElement;
-import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
 import io.micronaut.inject.ast.GenericPlaceholderElement;
 import io.micronaut.inject.ast.MemberElement;
 import io.micronaut.inject.ast.MethodElement;
 import io.micronaut.inject.ast.ParameterElement;
 import io.micronaut.inject.ast.PrimitiveElement;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadata;
+import io.micronaut.inject.ast.annotation.ElementAnnotationMetadataFactory;
+import io.micronaut.inject.ast.annotation.MethodElementAnnotationsHelper;
+import io.micronaut.inject.ast.annotation.MutableAnnotationMetadataDelegate;
 
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ExecutableElement;
@@ -42,7 +45,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * A method element returning data from a {@link ExecutableElement}.
@@ -60,25 +62,49 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
     private ParameterElement continuationParameter;
     private ClassElement genericReturnType;
     private ClassElement returnType;
+    private Map<String, ClassElement> typeArguments;
+    private Map<String, ClassElement> declaredTypeArguments;
+    private final MethodElementAnnotationsHelper helper;
 
     /**
      * @param owningType                The declaring class
-     * @param executableElement         The {@link ExecutableElement}
+     * @param nativeElement             The native element
      * @param annotationMetadataFactory The annotation metadata factory
      * @param visitorContext            The visitor context
      */
     public JavaMethodElement(JavaClassElement owningType,
-                             ExecutableElement executableElement,
+                             JavaNativeElement.Method nativeElement,
                              ElementAnnotationMetadataFactory annotationMetadataFactory,
                              JavaVisitorContext visitorContext) {
-        super(executableElement, annotationMetadataFactory, visitorContext);
-        this.executableElement = executableElement;
+        super(nativeElement, annotationMetadataFactory, visitorContext);
+        this.executableElement = nativeElement.element();
         this.owningType = owningType;
+        this.helper = new MethodElementAnnotationsHelper(this, annotationMetadataFactory);
+    }
+
+    @Override
+    protected MutableAnnotationMetadataDelegate<?> getAnnotationMetadataToWrite() {
+        return helper.getMethodAnnotationMetadata(presetAnnotationMetadata);
+    }
+
+    @Override
+    public ElementAnnotationMetadata getMethodAnnotationMetadata() {
+        return helper.getMethodAnnotationMetadata(presetAnnotationMetadata);
+    }
+
+    @Override
+    public AnnotationMetadata getAnnotationMetadata() {
+        return helper.getAnnotationMetadata(presetAnnotationMetadata);
+    }
+
+    @Override
+    public JavaNativeElement.Method getNativeType() {
+        return (JavaNativeElement.Method) super.getNativeType();
     }
 
     @Override
     protected AbstractJavaElement copyThis() {
-        return new JavaMethodElement(owningType, executableElement, elementAnnotationMetadataFactory, visitorContext);
+        return new JavaMethodElement(owningType, getNativeType(), elementAnnotationMetadataFactory, visitorContext);
     }
 
     @Override
@@ -104,9 +130,7 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
         final TypeMirror receiverType = executableElement.getReceiverType();
         if (receiverType != null) {
             if (receiverType.getKind() != TypeKind.NONE) {
-                final ClassElement classElement = mirrorToClassElement(receiverType,
-                    visitorContext,
-                    owningType.getGenericTypeInfo());
+                final ClassElement classElement = newClassElement(receiverType, getDeclaringType().getTypeArguments());
                 return Optional.of(classElement);
             }
         }
@@ -119,11 +143,8 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
         final List<? extends TypeMirror> thrownTypes = executableElement.getThrownTypes();
         if (!thrownTypes.isEmpty()) {
             return thrownTypes.stream()
-                .map(tm -> mirrorToClassElement(
-                    tm,
-                    visitorContext,
-                    owningType.getGenericTypeInfo()
-                )).toArray(ClassElement[]::new);
+                .map(tm -> newClassElement(tm, getDeclaringType().getTypeArguments()))
+                .toArray(ClassElement[]::new);
         }
 
         return ClassElement.ZERO_CLASS_ELEMENTS;
@@ -135,20 +156,25 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
     }
 
     @Override
+    public boolean isVarArgs() {
+        return executableElement.isVarArgs();
+    }
+
+    @Override
     public boolean overrides(MethodElement overridden) {
-//        if (this.equals(overridden) || isStatic() || overridden.isStatic()) {
-//            return false;
-//        }
-//        if (overridden instanceof JavaMethodElement) {
-//            boolean overrides = visitorContext.getElements().overrides(
-//                executableElement,
-//                ((JavaMethodElement) overridden).executableElement,
-//                owningType.classElement
-//            );
-//            if (overrides) {
-//                return true;
-//            }
-//        }
+        if (this.equals(overridden) || isStatic() || overridden.isStatic()) {
+            return false;
+        }
+        if (overridden instanceof JavaMethodElement javaMethodElement) {
+            boolean overrides = visitorContext.getElements().overrides(
+                executableElement,
+                javaMethodElement.executableElement,
+                owningType.classElement
+            );
+            if (overrides) {
+                return true;
+            }
+        }
         return MethodElement.super.overrides(overridden);
     }
 
@@ -157,32 +183,48 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
         if (isStatic() && getDeclaringType().isInterface()) {
             return false;
         }
-        return visitorContext.getElements().hides((Element) getNativeType(), (Element) hidden.getNativeType());
+        return visitorContext.getElements().hides(getNativeType().element(), ((JavaNativeElement.Method) hidden.getNativeType()).element());
     }
 
     @NonNull
     @Override
     public ClassElement getGenericReturnType() {
-        if (this.genericReturnType == null) {
-            this.genericReturnType = returnType(owningType.getGenericTypeInfo());
+        if (genericReturnType == null) {
+            genericReturnType = returnType(getDeclaringType().getTypeArguments());
         }
-        return this.genericReturnType;
+        return genericReturnType;
     }
 
     @Override
     @NonNull
     public ClassElement getReturnType() {
-        if (this.returnType == null) {
-            this.returnType = returnType(Collections.emptyMap());
+        if (returnType == null) {
+            returnType = returnType(Collections.emptyMap());
         }
-        return this.returnType;
+        return returnType;
     }
 
     @Override
     public List<? extends GenericPlaceholderElement> getDeclaredTypeVariables() {
         return executableElement.getTypeParameters().stream()
-            .map(tpe -> (GenericPlaceholderElement) mirrorToClassElement(tpe.asType(), visitorContext))
-            .collect(Collectors.toList());
+            .map(tpe -> (GenericPlaceholderElement) newClassElement(tpe.asType(), Collections.emptyMap()))
+            .toList();
+    }
+
+    @Override
+    public Map<String, ClassElement> getTypeArguments() {
+        if (typeArguments == null) {
+            typeArguments = MethodElement.super.getTypeArguments();
+        }
+        return typeArguments;
+    }
+
+    @Override
+    public Map<String, ClassElement> getDeclaredTypeArguments() {
+        if (declaredTypeArguments == null) {
+            declaredTypeArguments = resolveTypeArguments(executableElement, getDeclaringType().getTypeArguments());
+        }
+        return declaredTypeArguments;
     }
 
     @Override
@@ -211,7 +253,7 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
 
     @Override
     public MethodElement withNewOwningType(ClassElement owningType) {
-        JavaMethodElement javaMethodElement = new JavaMethodElement((JavaClassElement) owningType, executableElement, elementAnnotationMetadataFactory, visitorContext);
+        JavaMethodElement javaMethodElement = new JavaMethodElement((JavaClassElement) owningType, getNativeType(), elementAnnotationMetadataFactory, visitorContext);
         copyValues(javaMethodElement);
         return javaMethodElement;
     }
@@ -235,19 +277,20 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
      */
     @NonNull
     protected JavaParameterElement newParameterElement(@NonNull MethodElement methodElement, @NonNull VariableElement variableElement) {
-        return new JavaParameterElement(owningType, methodElement, variableElement, elementAnnotationMetadataFactory, visitorContext);
+        return new JavaParameterElement(owningType, methodElement, new JavaNativeElement.Variable(variableElement), elementAnnotationMetadataFactory, visitorContext);
     }
 
     @Override
     public JavaClassElement getDeclaringType() {
         if (resolvedDeclaringClass == null) {
             Element enclosingElement = executableElement.getEnclosingElement();
-            if (enclosingElement instanceof TypeElement) {
-                TypeElement te = (TypeElement) enclosingElement;
-                if (owningType.getName().equals(te.getQualifiedName().toString())) {
+            if (enclosingElement instanceof TypeElement te) {
+                String typeName = te.getQualifiedName().toString();
+                if (owningType.getName().equals(typeName)) {
                     resolvedDeclaringClass = owningType;
                 } else {
-                    resolvedDeclaringClass = (JavaClassElement) mirrorToClassElement(te.asType(), visitorContext, owningType.getGenericTypeInfo());
+                    Map<String, ClassElement> parentTypeArguments = owningType.getTypeArguments(typeName);
+                    resolvedDeclaringClass = (JavaClassElement) newClassElement(te.asType(), parentTypeArguments);
                 }
             } else {
                 return owningType;
@@ -261,13 +304,7 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
         return owningType;
     }
 
-    /**
-     * The return type for the given info.
-     *
-     * @param info The info
-     * @return The return type
-     */
-    protected ClassElement returnType(Map<String, Map<String, TypeMirror>> info) {
+    private ClassElement returnType(Map<String, ClassElement> genericInfo) {
         VariableElement varElement = CollectionUtils.last(executableElement.getParameters());
         if (isSuspend(varElement)) {
             DeclaredType dType = (DeclaredType) varElement.asType();
@@ -276,14 +313,14 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
                 tm = ((WildcardType) tm).getSuperBound();
             }
             // check Void
-            if ((tm instanceof DeclaredType) && sameType("kotlin.Unit", (DeclaredType) tm)) {
+            if ((tm instanceof DeclaredType dt) && sameType("kotlin.Unit", dt)) {
                 return PrimitiveElement.VOID;
             } else {
-                return mirrorToClassElement(tm, visitorContext, info, true);
+                return newClassElement(tm, genericInfo);
             }
         }
         final TypeMirror returnType = executableElement.getReturnType();
-        return mirrorToClassElement(returnType, visitorContext, info, true);
+        return newClassElement(getNativeType(), returnType, genericInfo);
     }
 
     private static boolean sameType(String type, DeclaredType dt) {
@@ -292,8 +329,7 @@ public class JavaMethodElement extends AbstractJavaElement implements MethodElem
     }
 
     private boolean isSuspend(VariableElement ve) {
-        if (ve != null && ve.asType() instanceof DeclaredType) {
-            DeclaredType dt = (DeclaredType) ve.asType();
+        if (ve != null && ve.asType() instanceof DeclaredType dt) {
             return sameType("kotlin.coroutines.Continuation", dt);
         }
         return false;
